[package]
name = "dagga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dot"]
dot = ["dot2"]

[dependencies]
dot2 = { version = "^1.0", optional = true }
log = "^0.4"
rustc-hash = "^1.1"
snafu = "^0.7"