[package]
name = "dagga"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["dag", "schedule", "solver"]
readme = "README.md"
documentation = "https://docs.rs/dagga"
repository = "https://github.com/schell/dagga"
categories = ["algorithms"]
description = "For scheduling directed acyclic graphs of nodes that create, read, write and consume resources."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dot"]
dot = ["dot2"]

[dependencies]
dot2 = { version = "^1.0", optional = true }
log = "^0.4"
rustc-hash = "^1.1"
snafu = "^0.7"